--- a/static/style.css
+++ b/static/style.css
@@ -115,11 +115,7 @@ textarea {
   font-family: 'PT Sans', sans-serif;
   font-size: 16pt;
   padding: .5rem;
-  background: #f1f1f1;
-  border: none;
-  /*width: 565px;*/
-  /*width: 1257px;*/
-  width: 98%;
+  width: 100%;
   height: 220px;
 }
 
@@ -129,23 +125,24 @@ textarea {
 }
 
 #form-control {
-  /*width: 565px;*/
   width: 50%;
-  background: #f1f1f1;
-  border: none;
 }
 
 .spc-n {
   font-family: 'PT Sans', sans-serif;
   font-size: 16pt;
   padding: .5rem;
-  background: #f1f1f1;
-  border:none;
+  border: none;
+  border-bottom: solid #000 1.5px;
   width: 100%;
   -ms-box-sizing:content-box;
   -moz-box-sizing:content-box;
   box-sizing:content-box;
   -webkit-box-sizing:content-box;
+}
+
+.todo-panel textarea {
+  border: solid #000 1.5px;
 }
 
 .spc-m {
@@ -235,7 +232,7 @@ textarea {
   left: 0;
   height: 25px;
   width: 25px;
-  background-color: #eee;
+  background-color: #dadada;
   margin-top: 26px;
 }
 
@@ -342,7 +339,7 @@ main {
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
-  /*height: 90vh; */
+  padding-top: 1rem;
   grid-gap: 10px;
   margin: 1rem 0;
 }
@@ -528,7 +525,7 @@ ul {
 }
 
 #form-control2 { 
-  width: 345px;
+  width: 50%;
   padding: 10px!important;
   background: #333;
   color: #fff;
@@ -555,6 +552,7 @@ ul {
 
 .todo-bg-test {
   background: #f7f7f7;
+  height:100%;
   background-repeat: no-repeat;
 }
 
@@ -577,7 +575,17 @@ element {
   box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
 }
 
+.inner-panel {
+  width: 60%;
+  margin: 0 auto;
+}
+.inner-task-panel {
+  width: 80%;
+  margin: 0 auto;
+}
+
 .task-panel {
+  font-size: 16pt;
   background: #fff;
   border-radius: 5px;
   width: 45%;
@@ -594,7 +602,8 @@ element {
 }
 .task-panel textarea {
   font-size: 16pt;
-  height: 250px;
+  height: 125px;
+  border: solid #000 1.5px;
 }
 /* settings section **/
 .settings-panel {
@@ -621,6 +630,13 @@ element {
 
 .text-center {
   text-align: center;
+}
+.form-intro {
+	width: 75%;
+	margin: 0 auto;
+}
+.form-intro p {
+	font-size: 16pt;
 }
 /* end settings section *?
 .todo-item {
@@ -678,12 +694,20 @@ select {
   margin-right: 2rem;
 }
 
+.ml2rem {
+  margin-left: 2rem;
+}
+
 #options {
   margin-right: 10px;
 }
 
 .log-container {
   padding: 0 2rem;
+}
+
+.log-container h3 {
+  padding-left: 8px;
 }
 
 .log-container label {
@@ -700,6 +724,9 @@ select {
 }
 */
 /* Task and Journal for detail views *********************************/
+.task-ops {
+  padding: 1rem 0;
+}
 .row-c2 {
   /* use for MR.F */
   display: flex;
