--- a/static/style.css
+++ b/static/style.css
@@ -579,9 +579,14 @@ element {
   width: 60%;
   margin: 0 auto;
 }
+
 .inner-task-panel {
   width: 80%;
   margin: 0 auto;
+}
+
+.btn-spcing {
+  padding: 0 2rem;
 }
 
 .task-panel {
@@ -1023,6 +1028,7 @@ tr:hover {background-color:#f5f5f5;}
     background: #fff;
     border-radius: 8px;
     padding: .5rem 1rem;
+    margin: 10px 0;
     box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
   }
 
@@ -1286,7 +1292,7 @@ tr:hover {background-color:#f5f5f5;}
     }
     button.add-btn {
       margin-bottom: 10px;
-      width: 100%;
+      /*width: 100%;*/
     }
     #logs-title {
       margin-left: 1rem!important;
@@ -1356,7 +1362,7 @@ tr:hover {background-color:#f5f5f5;}
     }
     
     #form-control2 {
-      width: 300px;
+      width: 50%;
     }
     
     .cat-list {
@@ -1408,6 +1414,15 @@ tr:hover {background-color:#f5f5f5;}
     /* analytics page */
     .pie-box {
       display: block;
+    }
+
+    /* login/signup mobile view */
+    .inner-panel {
+      margin: 0 auto;
+      width: 100%;
+    }
+    .form-intro {
+      width: 100%;
     }
   }
 
