--- a/static/style.css
+++ b/static/style.css
@@ -622,6 +622,7 @@ element {
 
 .settings-space {
   padding-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .settings-flex {
@@ -630,7 +631,32 @@ element {
 }
 
 .add-worker {
-  flex: 50% 0;
+  width: 60%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.add-worker input {
+  text-align: center;
+}
+
+.accept-btn {
+  background: green;
+  color: #fff;
+}
+.accept-btn:hover {
+  background:#333;
+}
+.deny-btn {
+  background-color: red;
+  color: #fff;
+}
+.deny-btn:hover {
+  background:#333;
+}
+
+.invites {
+  padding: 2rem 0;
 }
 
 .text-center {
@@ -1110,9 +1136,6 @@ tr:hover {background-color:#f5f5f5;}
   .pie-box {
     display: block;
   }
-  .pie-data {
-    width: 100%;
-  }
 }
   /*
   @media screen and (max-height: 700px) {
@@ -1124,12 +1147,6 @@ tr:hover {background-color:#f5f5f5;}
 
   /* Mobile responsive section start*/
   /* removed only keyword before screen keyword 6/18 */
-  @media screen and (max-width: 799px) {
-    .pie-data {
-      width: 100%;
-    }
-  }
-
   /* Make Tables Responsive */
   @media only screen and (max-width: 760px),
   (min-device-width: 768px) and (max-device-width: 1024px)  {
@@ -1240,9 +1257,6 @@ tr:hover {background-color:#f5f5f5;}
     }
     .edit-field {
       margin-top: .5rem;
-    }
-    .pie-data{
-      width: 100%;
     }
   }
 
