--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap);
+
 .unused-selector {
   margin:100px;
 }
@@ -5,7 +7,7 @@
 html, body {
     margin:0;
     padding: 0;
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Jost', sans-serif;
     /*font-family: baskerville, serif;*/
 }
   
