--- a/static/style.css
+++ b/static/style.css
@@ -474,6 +474,11 @@ ul {
   align-items: center;
 }
 
+.todo-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 .flex-end {
   align-items: flex-end;
 }
@@ -562,7 +567,7 @@ element {
   font-size: 16pt;
   background: #fff;
   border-radius: 5px;
-  width: 45%;
+  width: 80%;
   margin: 1rem auto;
   padding: 1.5rem;
   box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
