--- a/static/style.css
+++ b/static/style.css
@@ -101,7 +101,7 @@ textarea {
   font-size: 16pt;
   padding: .5rem 0;
   border: none;
-  border-bottom: solid #000 1.5px;
+  border-bottom: solid #c6c6c6 1.5px;
   width: 100%;
   -ms-box-sizing:content-box;
   -moz-box-sizing:content-box;
@@ -242,8 +242,13 @@ textarea {
 
 .svg-bg {
   display: block;
+  background-color: #000000;
+  color: #fff;
   background-image: linear-gradient(90deg, rgba(174,238,219,1) 0%, rgba(43,211,235,1) 100%);
-  background-repeat: no-repeat;
+  /* new is below */
+  background-color: #4c4177;
+  background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
+ 
 }
 
 .app-container {
@@ -269,6 +274,18 @@ textarea {
 /*-------------------------------------------------------*
 * DASHBOARD SECTION                                      |
 *-------------------------------------------------------*/
+.dash-grid {
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+  height: 100vh;
+}
+.side-bar {
+  padding: 0 2rem;
+  background: #fff;
+}
+
+
+
 .welcome {
   margin: 0!important;
   padding: 1rem 2rem;
@@ -294,6 +311,7 @@ main {
   width: auto;
   margin: 0 auto;
   margin-bottom: 1rem;
+  width: 80%;
 }
 
 .dash-footer {
@@ -1061,8 +1079,13 @@ tr:hover {background-color:#f5f5f5;}
 -----------------------------------*/
 /* 1920 monitors */
 @media screen and (min-width: 1900px) {
+  .dash-grid {
+    display: grid;
+    grid-template-columns: 3fr 20fr;
+    height: 100vh;
+  }
   main {
-    width: 80%;
+    width: 95%;
   }
 }
 
