--- a/static/style.css
+++ b/static/style.css
@@ -110,7 +110,7 @@ textarea {
 }
 
 .todo-panel textarea {
-  border: solid #000 1.5px;
+  border: solid #c6c6c6 1.5px;
   width: 95%;
 }
 
@@ -607,7 +607,7 @@ element {
 .task-panel textarea {
   font-size: 16pt;
   height: 125px;
-  border: solid #000 1.5px;
+  border: solid #c6c6c6 1.5px;
 }
 /* settings section **/
 .settings-panel {
@@ -911,6 +911,10 @@ tr:hover {background-color:#f5f5f5;}
   }
 
   .fa.fa-plus-circle {
+    font-size: 16pt!important;
+    margin-left:10px;
+  }
+  .fa.fa-chevron-circle-left {
     font-size: 16pt!important;
     margin-left:10px;
   }
