--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,15 +1,11 @@
 @import url(https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap);
 
-
-
-
-
 body {
   font-family: Jost;
 }
 .display-1 {
   font-family: 'Jost', sans-serif;
-  font-size: 4.2rem;
+  font-size: 3.5rem;
   line-height: 1.1;
 }
 .display-1 > .mbr-iconfont {
@@ -948,6 +944,9 @@ a {
   transition: all .3s;
   word-break: break-word;
   z-index: 1;
+}
+.cid-s6teCrATvk .navbar-brand a {
+  color: #1a1a1a!important;
 }
 .cid-s6teCrATvk .navbar-brand .navbar-caption {
   line-height: inherit !important;
