--- a/static/style.css
+++ b/static/style.css
@@ -127,6 +127,10 @@ textarea {
   -webkit-box-sizing:content-box;
 }
 
+.spc-n:focus {
+  outline: none;
+}
+
 .todo-panel textarea {
   border: solid #c6c6c6 1.5px;
   width: 95%;
@@ -306,6 +310,13 @@ textarea {
 .fixed-content {
   top: 0;
   position:sticky;
+  height: 100vh;
+}
+.fixed-content-items {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: auto;
+  height: 100vh;
 }
 
 .welcome {
@@ -1074,12 +1085,24 @@ tr:hover {background-color:#f5f5f5;}
   }
 
   /* use in chat-details.php */
-  .add-btn a{
+  .add-btn a {
     color: #000;
     background: #fff;
     border-radius: 8px;
     padding: .5rem 1rem;
     box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
+  }
+  .dash-btn {
+    color: #000;
+    background: #fff;
+    border-radius: 8px;
+    width: 60%;
+    padding: .5rem 1rem;
+    box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
+  }
+  #myBtn {
+    display: flex;
+    justify-content: space-between;
   }
 
   button.add-btn {
