See change log and TODO in README

--- a/static/style.css
+++ b/static/style.css
@@ -272,7 +272,11 @@ textarea {
   /* new is below */
   background-color: #4c4177;
   background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
- 
+}
+
+.jedits {
+  top: 0;
+  position:sticky;
 }
 
 .app-container {
@@ -300,7 +304,7 @@ textarea {
 *-------------------------------------------------------*/
 .dash-grid {
   display: grid;
-  grid-template-columns: 3fr 10fr;
+  grid-template-columns: 2fr 10fr;
   height: 100vh;
 }
 .side-bar {
@@ -383,7 +387,7 @@ main {
 .grid-container div{
   padding: 1rem;
   text-align: center;
-  font-size: 28px;
+  font-size: 22px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -525,6 +529,10 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.align-initial {
+  align-items: initial!important;
 }
 
 .todo-grid {
@@ -686,10 +694,6 @@ element {
 }
 .deny-btn:hover {
   background:#333;
-}
-
-.invites {
-  padding: 2rem 0;
 }
 
 .text-center {
@@ -943,7 +947,7 @@ tr:hover {background-color:#f5f5f5;}
   }
 
   .spc-1 {
-    font-size: 35pt!important;
+    font-size: 28pt!important;
     
   }
 
@@ -1096,7 +1100,7 @@ tr:hover {background-color:#f5f5f5;}
     color: #000;
     background: #fff;
     border-radius: 8px;
-    width: 60%;
+    width: 80%;
     padding: .5rem 1rem;
     box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
   }
