--- a/static/style.css
+++ b/static/style.css
@@ -274,7 +274,7 @@ textarea {
   background-image: linear-gradient(315deg, #4c4177 0%, #2a5470 74%);
 }
 
-.jedits {
+.sticky {
   top: 0;
   position:sticky;
 }
@@ -384,7 +384,7 @@ main {
   padding: 1rem;
 }
 
-.grid-container div{
+.grid-container a{
   padding: 1rem;
   text-align: center;
   font-size: 22px;
@@ -396,15 +396,9 @@ main {
   box-shadow: 3px 5px 5px -2px rgba(0,0,0,.2);
   background: #fff;
 }
-.grid-container div:hover {
+.grid-container a:hover {
   box-shadow: 0px 0px 7px 2px rgba(174,238,219,1);
   background: #2a5470;
-  color: #fff;
-}
-.grid-container a:hover {
-  color: #fff;
-}
-.grid-container i:hover {
   color: #fff;
 }
 .activity {
@@ -572,21 +566,10 @@ ul {
 /* used for gradient bgs in dashboard and creating posts and tasks */
 .todo-bg {
   background: #f1f1f1;
-  /* fallback for old browsers 
-  background-image: linear-gradient(90deg, rgba(174,238,219,1) 0%, rgba(43,211,235,1) 100%);
-  background: #5298b7;
-  background: -webkit-linear-gradient(to right, #5298b7, #207b9a, #194f65);
-  background: linear-gradient(to right, #5298b7, #207b9a, #194f65);
-  */
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
   background-image: url(../assets/images/test-landing.png);
-/* Possibly change to this gradient colors
-  background: #485563;  
-  background: -webkit-linear-gradient(to right, #29323c, #485563);
-  background: linear-gradient(to left, #29323c, #485563); 
-/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .todo-bg-test {
@@ -595,12 +578,6 @@ ul {
   background-repeat: no-repeat;
 }
 
-/* attempting to disable horizontal scrolling on dashboard
-html, body {
-  max-width: 100%;
-  overflow-x: hidden;
-}
-*/
 element {
   overflow-x: hidden;
   max-width: 100vw;
@@ -631,13 +608,7 @@ element {
 .task-panel {
   font-size: 16pt;
   background: #fff;
-  border-radius: 5px;
-  width: 80%;
-  margin: 1rem auto;
   padding: 1.5rem;
-  /*
-  box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
-  */
 }
 
 .task-panel select {
@@ -707,31 +678,6 @@ element {
 	font-size: 16pt;
 }
 /* end settings section *?
-.todo-item {
-    font-size: 16pt;
-    width: 328px;
-    background: #f1f1f1;
-    border: none;
-}
-
-input[type="date"] {
-    font-size: 16pt;
-    text-align: center;
-}
-
-input[type="time"] {
-    font-size: 16pt;
-    text-align: center;
-}
-
-select {
-  font-size: 14pt;
-}
-
-.rep-item {
-  width: 100%;
-  font-size: 16pt;
-}
 
 /*-------------------------------------------------------*
 * LOGS.PHP SECTION                                       |
@@ -789,12 +735,6 @@ select {
   margin-top: 1em;
   margin-bottom: 1em;
 }
-/*
-.log-container input[type="date"] {
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-*/
 /* Task and Journal for detail views *********************************/
 .task-ops {
   padding: 1rem 0;
@@ -890,12 +830,6 @@ button {
   font-size: 25px;
 }
 /* Todo & Journal Icons ***********************/
-/*
-.task-auto {
-  width: 80%;
-  margin: 0 auto;
-}
-*/
 
 .todo-txt-area {
   width: 100%!important;
@@ -964,19 +898,6 @@ tr:hover {background-color:#f5f5f5;}
     Analytics Section                 |
   -----------------------------------*/
 /*********************************************************/
-  /* attempt at responsive gantt chart
-  @media screen and (max-width: 1900px) {
-    #chart_div {
-      width: 1300px;
-    }
-  }
-  @media screen and (max-width: 1300px) {
-    #chart_div {
-      width: 100%; 
-      text-align: center;
-    }
-  }
-  */
   .simple-input {
     padding: 7.7px;
     box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
@@ -985,11 +906,6 @@ tr:hover {background-color:#f5f5f5;}
   .main-page {
     margin: 2rem;
   }
-  /*
-  .a-panel {
-    border: solid #333 1px;
-  }
-  */
   .avgs {
     display: flex;
     justify-content: space-between;
@@ -1017,9 +933,7 @@ tr:hover {background-color:#f5f5f5;}
 
   #piechart {
     width: 100%; 
-    /*
-    min-height: 450px;
-    */
+    /*min-height: 450px;*/
     display: block;
     margin: 0 auto
   }
@@ -1030,7 +944,6 @@ tr:hover {background-color:#f5f5f5;}
     padding: 1rem;
     margin-top: 10px;
   }
-
   
   /* ---------------------------------+
     Chatroom Section                  |
@@ -1052,7 +965,7 @@ tr:hover {background-color:#f5f5f5;}
   }
 
   /* ---------------------------------+
-    Voting App Section                |
+    Voting App Section (REMOVE)       |
   -----------------------------------*/
   .feature-panel {
     margin: 1rem 0;
@@ -1143,6 +1056,9 @@ tr:hover {background-color:#f5f5f5;}
   }
   main {
     width: 95%;
+  }
+  .todo-panel textarea {
+    height: 442px;
   }
 }
 
