--- a/static/style.css
+++ b/static/style.css
@@ -140,6 +140,13 @@ textarea {
   font-size: 16pt;
 }
 
+.create-doc.todo-panel textarea {
+  border: solid #c6c6c6 1.5px;
+  width: 95%;
+  height: 300px;
+  font-size: 16pt;
+}
+
 .spc-m {
   margin-left: 10px;
 }
@@ -313,6 +320,7 @@ textarea {
   position: fixed;
   bottom:0;
   margin-left: 1rem;
+  z-index: 10;
 }
 
 .sup-text {
@@ -781,7 +789,7 @@ element {
 }
 
 .log-details {
-  width: 760px;
+  width: 700px;
   margin: 0 auto;
 }
 
@@ -1200,25 +1208,29 @@ tr:hover {background-color:#f5f5f5;}
     /*
     Labeling mobile tables: Journal Section
     */
-    .journal-tab td:nth-of-type(1):before { content: "Journal ID"; }
+    .journal-tab td:nth-of-type(1):before { content: "Category"; }
     .journal-tab td:nth-of-type(2):before { content: "Title"; }
     .journal-tab td:nth-of-type(3):before { content: "Preview"; }
-    .journal-tab td:nth-of-type(4):before { content: "Category"; }  
-    .journal-tab td:nth-of-type(5):before { content: "Mood Rating"; }
-    .journal-tab td:nth-of-type(6):before { content: "Date Posted"; }
+    .journal-tab td:nth-of-type(4):before { content: "Creator"; }  
+    .journal-tab td:nth-of-type(5):before { content: "Date Posted"; }
 
     /*
     Labeling mobile tables: Task Section
     */
-  .task-tab td:nth-of-type(1):before { content: "Team"; }
-  .task-tab td:nth-of-type(2):before { content: "Title"; }
-  .task-tab td:nth-of-type(3):before { content: "Status"; }
-  .task-tab td:nth-of-type(4):before { content: "Due Date"; }  
-  .task-tab td:nth-of-type(5):before { content: "Time Due"; }
-  .task-tab td:nth-of-type(6):before { content: "Assigned To"; }
-  .task-tab td:nth-of-type(7):before { content: "Assigned By"}
-  .task-tab td:nth-of-type(8):before { content: "Priority"; }
-  .task-tab td:nth-of-type(9):before { content: "Date Posted"; }
+    .task-tab td:nth-of-type(1):before { content: "Title"; }
+    .task-tab td:nth-of-type(2):before { content: "Status"; }
+    .task-tab td:nth-of-type(3):before { content: "Assigned To"; }
+    .task-tab td:nth-of-type(4):before { content: "Team"; }
+    .task-tab td:nth-of-type(5):before { content: "Priority"; }
+    .task-tab td:nth-of-type(6):before { content: "Due Date"; }  
+    .task-tab td:nth-of-type(7):before { content: "Date Posted"; }
+
+    .settings-tab td:nth-of-type(1):before { content: "Action"; }
+    .settings-tab td:nth-of-type(2):before { content: "Project"; }
+    .settings-tab td:nth-of-type(3):before { content: "Receiver"; }
+    .settings-tab td:nth-of-type(4):before { content: "Sender"; }
+    .settings-tab td:nth-of-type(5):before { content: "Status"; }
+    .settings-tab td:nth-of-type(6):before { content: "Submitted"; } 
 
   @media screen and (max-width: 700px) {
     .topnav-list li {
@@ -1253,6 +1265,7 @@ tr:hover {background-color:#f5f5f5;}
       float: none;
       display: block;
       text-align: left;
+      z-index: 10;
     }
     .topnav.responsive .icon {
       position: absolute;
@@ -1280,6 +1293,7 @@ tr:hover {background-color:#f5f5f5;}
       position: fixed;
       top: 0;
       width: 100%;
+      z-index: 10;
     }
     .topnav.responsive .icon {
       position: absolute;
