--- a/static/style.css
+++ b/static/style.css
@@ -647,6 +647,12 @@ element {
   height: 125px;
   border: solid #c6c6c6 1.5px;
 }
+/* subtask section **/
+#subt-txt-area {
+  height: 100px;
+  width: 95%;
+}
+
 /* settings section **/
 .settings-panel {
   background: #fff;
@@ -698,6 +704,9 @@ element {
 
 .text-center {
   text-align: center;
+}
+.text-right {
+  text-align: right;
 }
 .form-intro {
 	width: 85%;
@@ -1046,7 +1055,7 @@ tr:hover {background-color:#f5f5f5;}
     padding: .5rem 1rem;
     box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
   }
-  #myBtn {
+  .spc-flex {
     display: flex;
     justify-content: space-between;
   }
