--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,6 @@
 */
 .srch-section {
   margin-bottom: 1rem;
-  /*box-shadow: 0 3px 2px -2px rgba(0,0,0,.2);*/
   display: flex;
   justify-content: space-between;
   padding: 0 2rem;
@@ -19,6 +18,9 @@
 }
 .search-field:focus {
   outline: none;
+}
+.blockzero {
+  margin-block-end: 0;
 }
 input.add-btn {
   height: 38px;
