--- a/static/style.css
+++ b/static/style.css
@@ -389,10 +389,15 @@ textarea {
 #save-btn {
   display: none;
 }
-#txt-area {
+#wiki-txt-area {
   height: 130px;
   width: 97%;
   border: solid #c6c6c6 1.5px;
+}
+#txt-area {
+  /*height: 130px;*/
+  width: 97%;
+  /*border: solid #c6c6c6 1.5px;*/
 }
 #pounds {
   height: 130px;
