--- a/static/style.css
+++ b/static/style.css
@@ -9,12 +9,13 @@
   justify-content: space-between;
   padding: 0 2rem;
   padding-bottom: 10px;
+  width: 100%;
 }
 .search-field {
   margin-block-start: 2em;
   border: solid 1px rgb(122, 122, 122);
-  width: 450px;
   padding: 10px;
+  width: 100%;
 }
 .search-field:focus {
   outline: none;
@@ -681,7 +682,7 @@ ul {
 .scroll-item {
   border-bottom: 2px solid #f1f1f1;
   padding: 1rem;
-  width: 400px;
+  width: 620px;
 }
 .scroll-item:hover {
   background: #f1f1f1;
@@ -1119,7 +1120,7 @@ tr:hover {background-color:#f5f5f5;}
 }
 .pie-data {
   background: #fff;
-  box-shadow: 0px 0px 7px 2px rgba(0,0,0,.2);
+  border: solid #ddd 2px;
   border-radius: 8px;
   padding: 1rem;
   margin-top: 10px;
