--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,9 @@
 .blockzero {
   margin-block-end: 0;
 }
+.project-entry {
+	padding: 2rem 0;
+}
 input.add-btn {
   height: 38px;
   margin-block-start: 2em;
